--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ p{
         padding-left: 5%;
     }
     .bio-text-center{
-padding-top: 15%;
+        padding-top: 15%;
     }
     .images{
         max-width: 30%;
@@ -78,4 +78,28 @@ padding-top: 15%;
         background-repeat: no-repeat;
         padding-bottom: 15%;
         background-position: center;
+    }
+
+    .center-align{
+        text-align: center;
+        background-image: url("images/footer-bg.png");
+        background-repeat: no-repeat;
+        background-position: center;
+        padding-bottom: 15%;
+    }
+    .center-footer{
+        text-align: center;
+        margin-bottom: 50px;
+    }
+    .xp{
+        border-radius: 5px;
+        height: 30%;
+        background-color: #ec4e8b;
+        margin: 0px 200px;
+    }
+    #web p{
+        color: white;
+        text-align: center;
+        padding-top: 40px;
+        padding-bottom: 40px;
     }
